--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -113,7 +113,7 @@ msgid "Authentication"
 msgstr "Autenticação"
 
 msgid "Username / Email"
-msgstr "Nome / Email"
+msgstr "Usuário / Email"
 
 msgid "Password"
 msgstr "Senha"
